// Package records.

message PackageVersion  {
  required uint32 major = 1;
  required string tag = 2;
}

message PackageMetadata {
  required PackageVersion latest = 1;
}

message PackageRecord {
  required string name = 1;
  required string key = 2;
  required PackageVersion version = 4;
  map<uint32, bytes> versionMap = 5;

  required string transformed = 5;
  required string original = 6;
}

// Type records.

message RecordFieldMetadata {
  required string name = 1;
  required bool repeated = 2;
}

message TypeVersion {
  required uint32 backwards = 1;
  required uint32 forwards = 2;
  optional uint32 patch = 3;
}

message TypeMetadata {
  required TypeVersion latest = 1;
}

message TypeRecord {
  required string name = 1;
  required string packageId = 2;
  required TypeVersion version = 3;  
  required PackageVersion packageVersion = 4; 
  map<string, RecordFieldMetadata> fieldTypeMap = 5;
  optional string parent = 6;
}
